RESOLVED FIXED310189
REGRESSION (308504@main): Multiple fast/text-extraction tests crash on internal macOS test runners
https://bugs.webkit.org/show_bug.cgi?id=310189
Summary REGRESSION (308504@main): Multiple fast/text-extraction tests crash on intern...
Wenson Hsieh
Reported 2026-03-18 08:57:46 PDT
Attachments
Wenson Hsieh
Comment 1 2026-03-18 09:14:50 PDT
EWS
Comment 2 2026-03-18 11:45:48 PDT
Committed 309496@main (b5a77f055c92): <https://commits.webkit.org/309496@main> Reviewed commits have been landed. Closing PR #60865 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.