REGRESSION (308504@main): Multiple fast/text-extraction tests crash on internal macOS test runners https://bugs.webkit.org/show_bug.cgi?id=310189 rdar://172823439

Reviewed by Abrar Rahman Protyasha.

Make several adjustments to avoid crashing on macOS when running these layout tests:

-   Set an explicit bitmap image size for the initial full-page snapshot; on iOS, we automatically
    calculate the target bitmap size if it's otherwise unspecified, but on macOS, we appear to crash
    if it's set to an empty size.

-   Use `TextRecognitionLevel::Accurate` instead of `Fast` when validating per-paragraph snapshots,
    in the case where the full-page snapshot didn't already contain most of the words in the
    paragraph. This is necessary to keep several layout tests passing on macOS, due to the fast
    full-page snapshot missing some content in `debug-text-extraction-lightweight.html` and
    `debug-text-extraction-lightweight-discretionary.html`.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _requestTextExtractionInternal:completion:]):
(-[WKWebView _validateText:inFrame:inNode:completionHandler:]):

Canonical link: https://commits.webkit.org/309496@main